objects/Risk_Start_System__c.object
<CustomObject>
    <description>Risk Start system is used to recommend PX lot starts. The system will have forms completed by different departments and the in bulit work flow will help to process the PX lot start request. System will also feedback on the conversion of PX to PO lots.</description>
    <fields>
        <fullName>Account_Manager_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Manager_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Manager_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Manager_3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Action_Date__c</fullName>
        <description>Account Manager Action Date</description>
        <inlineHelpText>Account Manager Action Date</inlineHelpText>
        <label>Account Manager Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Team_Proxy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account_Team_Proxy__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Customer_Name__c</valueField>
            </filterItems>
            <filterItems>
                <field>Account_Team_Proxy__c.Team_Role__c</field>
                <operation>equals</operation>
                <value>Primary Account Manager</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account_Team_Proxy__c</referenceTo>
        <relationshipName>Risk_Start_System</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age_Pricing__c</fullName>
        <formula>IF( ISNULL ( Submitted_Date__c )
, FLOOR( NOW() - CreatedDate ) + ( MOD( NOW()  - CreatedDate, 1 )  * 24)/100
, FLOOR( Submitted_Date__c  -  CreatedDate ) + ( MOD ( Submitted_Date__c  -  CreatedDate , 1)  *  24 )  /  100)</formula>
        <label>Age of Pricing Team Input</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(ISNULL( Conversion_Complete_Action_Date__c )
, FLOOR(NOW() - CreatedDate) + (MOD(NOW() - CreatedDate, 1) * 24)/100
, FLOOR(Conversion_Complete_Action_Date__c - CreatedDate) + (MOD(Conversion_Complete_Action_Date__c - CreatedDate, 1) * 24)/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age Risk Start</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_of_Conversion_Complete__c</fullName>
        <formula>IF( ISNULL( Conversion_Complete_Action_Date__c )
 , FLOOR(NOW()  -  Conversion_InProgress_Action_Date__c) + (MOD(NOW()  -  Conversion_InProgress_Action_Date__c, 1) * 24)/100
 , FLOOR(Conversion_Complete_Action_Date__c  -  Conversion_InProgress_Action_Date__c) + (MOD(Conversion_Complete_Action_Date__c  -  Conversion_InProgress_Action_Date__c, 1) * 24)/100)</formula>
        <label>Age of Conversion Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_of_Conversion__c</fullName>
        <formula>IF( ISNULL( Conversion_InProgress_Action_Date__c )
 , FLOOR(NOW() -  Final_Approver_Action_Date__c) + (MOD(NOW() -  Final_Approver_Action_Date__c, 1) * 24)/100
 , FLOOR(Conversion_InProgress_Action_Date__c -  Final_Approver_Action_Date__c) + (MOD(Conversion_InProgress_Action_Date__c -  Final_Approver_Action_Date__c, 1) * 24)/100)</formula>
        <label>Age of Conversion In Progress</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_of_Customer_Planning__c</fullName>
        <formula>IF ( ISNULL(Customer_Planning_Action_Date__c) 
 , FLOOR(NOW() -  Pricing_Team_Action_Date__c) + (MOD(NOW() -  Pricing_Team_Action_Date__c, 1) * 24)/100
 , FLOOR(Customer_Planning_Action_Date__c -  Pricing_Team_Action_Date__c) + (MOD(Customer_Planning_Action_Date__c -  Pricing_Team_Action_Date__c, 1) * 24)/100)</formula>
        <label>Age of Customer Planning</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_of_FAB_Approval__c</fullName>
        <formula>IF( ISNULL ( VP_Management_FAB_Approval__c )
, FLOOR ( NOW() - VP_Business_Action_Dates__c ) + ( MOD ( NOW() - VP_Business_Action_Dates__c, 1) * 24 ) / 100
, FLOOR ( VP_Management_FAB_Approval__c - VP_Business_Action_Dates__c ) + ( MOD ( VP_Management_FAB_Approval__c - VP_Business_Action_Dates__c, 1 ) * 24 ) / 100)</formula>
        <label>Age of VP &amp; FAB Approval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_of_Final_Approval__c</fullName>
        <formula>IF ( ISNULL (Final_Approver_Action_Date__c)
 , FLOOR(NOW() -  Pending_VP_Action_Date__c) + (MOD(NOW() -  Pending_VP_Action_Date__c, 1) * 24)/100
 , FLOOR(Final_Approver_Action_Date__c -  Pending_VP_Action_Date__c) + (MOD(Final_Approver_Action_Date__c -  Pending_VP_Action_Date__c, 1) * 24)/100)</formula>
        <label>Age of Final Approval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_of_Pricing_Approval__c</fullName>
        <formula>IF( ISNULL ( Submitted_Date__c )
, FLOOR ( NOW()  -  Submitted_Date__c )  +  ( MOD ( NOW()  - Submitted_Date__c, 1)  *  24 ) / 100
, FLOOR ( Pricing_Team_Action_Date__c  -  Submitted_Date__c )  +  ( MOD ( Pricing_Team_Action_Date__c  -  Submitted_Date__c,  1 )  *  24 ) / 100)</formula>
        <label>Age of Pricing Approval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_of_Region_Head_Approval__c</fullName>
        <formula>IF( ISNULL ( Region_Head_Action_Date__c )
, FLOOR( NOW() - Account_Manager_Action_Date__c ) + ( MOD( NOW() - Account_Manager_Action_Date__c, 1 ) * 24)/100
, FLOOR( Region_Head_Action_Date__c - Account_Manager_Action_Date__c) + ( MOD ( Region_Head_Action_Date__c - Account_Manager_Action_Date__c, 1) * 24 ) / 100)</formula>
        <label>Age of Region Head Approval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_of_SAM_Approval__c</fullName>
        <formula>IF( ISNULL ( Account_Manager_Action_Date__c )
, FLOOR ( NOW() - Customer_Planning_Action_Date__c ) + ( MOD ( NOW() - Customer_Planning_Action_Date__c, 1) * 24 ) / 100
, FLOOR ( Account_Manager_Action_Date__c - Customer_Planning_Action_Date__c ) + ( MOD ( Account_Manager_Action_Date__c - Customer_Planning_Action_Date__c, 1 ) * 24 ) / 100)</formula>
        <label>Age of SAM Approval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_of_VP_Approval__c</fullName>
        <formula>IF(ISNULL( Pending_VP_Action_Date__c )
 , FLOOR(NOW() -  VP_Management_FAB_Approval__c) + (MOD(NOW() -  VP_Management_FAB_Approval__c, 1) * 24)/100
 , FLOOR(Pending_VP_Action_Date__c -  VP_Management_FAB_Approval__c) + (MOD(Pending_VP_Action_Date__c -  VP_Management_FAB_Approval__c, 1) * 24)/100)</formula>
        <label>Age of VP Approval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_of_VP_Business_Approval__c</fullName>
        <formula>IF( ISNULL ( VP_Business_Action_Dates__c )
, FLOOR ( NOW() - Region_Head_Action_Date__c ) + ( MOD ( NOW() - Region_Head_Action_Date__c, 1) * 24 ) / 100
, FLOOR ( VP_Business_Action_Dates__c - Region_Head_Action_Date__c ) + ( MOD ( VP_Business_Action_Dates__c - Region_Head_Action_Date__c, 1 ) * 24 ) / 100)</formula>
        <label>Age of VP &amp; Business Ops Approval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aged_PX_WIP_Requested_Device__c</fullName>
        <label>Aged PX WIP (Requested Device)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aged_PX__c</fullName>
        <formula>IF(All_PX_WIP__c = 0, 0, Aged_PX_WIP_Requested_Device__c  /  All_PX_WIP__c)</formula>
        <label>Aged PX %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>All_PX_WIP__c</fullName>
        <inlineHelpText>All PX Wip  (Recommended Customer)</inlineHelpText>
        <label>Current Requested PX WIP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <formula>Final_Approver_Action_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BTS__c</fullName>
        <formula>Balance_Qty__c - PIXWIP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding PX Quantity to Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balance_Qty__c</fullName>
        <formula>Recommended_Quantity__c  - ( Total_PO_Quantity__c + Total_Write_Off_Qty__c + Total_Scrap_Qty__c + Total_Void_Qty__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking_History_Qtr_1__c</fullName>
        <label>Booking History Qtr-1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking_History__c</fullName>
        <inlineHelpText>PO booked in current quarter</inlineHelpText>
        <label>Booking History Qtr-0</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>To identify which Business Unit the risk start approval should route to</description>
        <inlineHelpText>Please select the business unit of the Risk Start Part.</inlineHelpText>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FAB__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>RF Business Unit</fullName>
                </value>
                <value>
                    <fullName>ASICs Business Unit</fullName>
                </value>
                <value>
                    <fullName>A&amp;D Business Unit</fullName>
                </value>
                <value>
                    <fullName>IBM Business Unit</fullName>
                </value>
                <value>
                    <fullName>CMOS Platform</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Conversion_Complete_Action_Date__c</fullName>
        <description>Conversion Complete Action Date</description>
        <inlineHelpText>Conversion Complete Action Date</inlineHelpText>
        <label>Conversion Complete Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Conversion_Complete_Date__c</fullName>
        <label>Conversion Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conversion_Complete_Range__c</fullName>
        <formula>Conversion_Complete_Date__c + 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversion Complete Range</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conversion_Completed__c</fullName>
        <formula>IF( ISPICKVAL( Status__c , &apos;Conversion Completed&apos;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversion Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conversion_InProgress_Action_Date__c</fullName>
        <label>Conversion InProgress Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cum_Revenue__c</fullName>
        <description>The total revenue dollars of all current PX WIP and BTS for same device and includes  current request</description>
        <inlineHelpText>The total revenue dollars of all current PX WIP and BTS for same device and includes  current request</inlineHelpText>
        <label>Cum Revenue $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cummulative_Quantity__c</fullName>
        <inlineHelpText>Cummulative Quantity = Manual Sum of the avaialble quantity in this field and the current POarrival or void or write off quantity. User needs to enter the final sum in this field</inlineHelpText>
        <label>Cummulative Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.ParentId</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer, Enablement Partner, GLOBALFOUNDRIES Internal, Reseller</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Risk Start</relationshipLabel>
        <relationshipName>Risk_Start_System</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Customer_Past_12_Mths_Write_Off_wafers__c</fullName>
        <inlineHelpText>Write-off for recommended PX Customer in the past 12 months</inlineHelpText>
        <label>Customer_Past 12 Mths Write Off (wafers)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Planning_Action_Date__c</fullName>
        <description>Customer Planning Action Date</description>
        <inlineHelpText>Customer Planning Action Date</inlineHelpText>
        <label>Customer Planning Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Provision_on_Hand_Wafers__c</fullName>
        <inlineHelpText>Outstanding provision made for recommended PX Customer</inlineHelpText>
        <label>Customer_Provision on Hand (Wafers) :</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Short_Name__c</fullName>
        <formula>Customer_Name__r.Short_Name__c</formula>
        <label>Customer Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Raised__c</fullName>
        <formula>CreatedDate</formula>
        <label>Date Raised</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Device_Past_12_mths_write_off_wafers__c</fullName>
        <inlineHelpText>Write-off for recommended PX Device in the past 12 months</inlineHelpText>
        <label>Device_Past 12 Mths Write Off (wafers)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Device_Provision_On_Hand_wafers__c</fullName>
        <description>Outstanding provision made for recommended PX Device</description>
        <label>Device_Provision On Hand (wafers)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>Plan End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Endorsed_by_Sales_Account_Manager__c</fullName>
        <label>Endorsed by Sales Account Manager ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enter_Reason_if_Planning_Endorsment_No__c</fullName>
        <label>Enter Reason if Planning Endorsement=No</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expected_PO_Date__c</fullName>
        <description>Expected last PO Booking date</description>
        <inlineHelpText>Expected last PO Booking date</inlineHelpText>
        <label>Expected PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Shipment_Date__c</fullName>
        <label>Expected Shipment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAB__c</fullName>
        <label>FAB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fab 1</fullName>
                </value>
                <value>
                    <fullName>Fab 2</fullName>
                </value>
                <value>
                    <fullName>Fab 3</fullName>
                </value>
                <value>
                    <fullName>Fab 3E</fullName>
                </value>
                <value>
                    <fullName>Fab 5</fullName>
                </value>
                <value>
                    <fullName>Fab 6</fullName>
                </value>
                <value>
                    <fullName>Fab 7</fullName>
                </value>
                <value>
                    <fullName>Fab 8</fullName>
                </value>
                <value>
                    <fullName>Fab 9</fullName>
                </value>
                <value>
                    <fullName>Fab 10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fab_Past_12_Mths_Write_Off_Wafers__c</fullName>
        <inlineHelpText>Write-off for recommended PX Fab in the past 12 months</inlineHelpText>
        <label>Fab_Past 12 Mths Write Off (Wafers)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fab_Planner_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fab Planning User 15</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Fab_Planner_10</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fab_Planner_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fab Planning User 6</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Fab_Planner_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fab_Planner_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fab Planning User 7</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Fab_Planner_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fab_Planning_User_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fab Planning User 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Fab_Planning_User_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fab_Planning_User_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fab Planning User 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Fab_Planning_User_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fab_Planning_User_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fab Planning User 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Fab_Planning_User_3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fab_Provision_on_Hand_Wafers__c</fullName>
        <inlineHelpText>Outstanding provision made for recommended PX Fab</inlineHelpText>
        <label>Fab_Provision on Hand (Wafers) :</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Approver_Action_Date__c</fullName>
        <description>Final Approver Action Date</description>
        <inlineHelpText>Final Approver Action Date</inlineHelpText>
        <label>Final Approver Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Approval_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>First pending approval reminder in day</description>
        <inlineHelpText>First pending approval reminder in day</inlineHelpText>
        <label>First Approval Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hold_Stage_for_PX_WIP__c</fullName>
        <label>Hold Stage for PX WIP</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Yes_state_revision_discount__c</fullName>
        <inlineHelpText>State discount % if &quot;Yes&quot;. No actions required if &quot;No&quot; or &quot;NA&quot;.</inlineHelpText>
        <label>If &quot;Yes&quot;, state revision discount %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>If_Yes_state_revision_layers_and_expe__c</fullName>
        <label>If Yes, Revision Layers , Expected Time</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initiator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Risk_Start_System</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_EOL_Expected__c</fullName>
        <label>Is EOL Expected?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_PX_Requested_Device_Qualified__c</fullName>
        <description>Is the Requested Device qualified in the Fab and/or Customer?</description>
        <inlineHelpText>Is the Requested Device qualified in the Fab and/or Customer?</inlineHelpText>
        <label>Is PX Requested Device Qualified?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fab - Yes</fullName>
                </value>
                <value>
                    <fullName>Fab - No</fullName>
                </value>
                <value>
                    <fullName>Fab - NA</fullName>
                </value>
                <value>
                    <fullName>Customer - Yes</fullName>
                </value>
                <value>
                    <fullName>Customer - No</fullName>
                </value>
                <value>
                    <fullName>Customer - NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_customer_design_change_expected__c</fullName>
        <label>Customer Design Change Expected ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Mask_Layer__c</fullName>
        <label>No. of Mask Layer</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PID__c</fullName>
        <label>PID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIXWIP__c</fullName>
        <label>PIX WIP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PIX_WIP__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; $Label.Risk_Start_Report_URL &amp; &quot;?pv0=&quot; &amp; SUBSTITUTE( Name , LEFT(Name, 4), &apos;&apos;), &quot;Report&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PIX WIP(Report)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_ARRIVAL__c</fullName>
        <label>PO ARRIVAL</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Arrival_Date__c</fullName>
        <inlineHelpText>Enter the PO Arrival Date in the below format :

(MM/DD/YY) ; (MM/DD/YY) ; (MM/DD/YY) : (MM/DD/YY)</inlineHelpText>
        <label>PO Arrival Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PO_Cycle_Time__c</fullName>
        <label>PO Cycle Time</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PX_BTS1__c</fullName>
        <label>PX BTS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PX_BTS2__c</fullName>
        <label>PX BTS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PX_BTS3__c</fullName>
        <label>PX BTS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PX_PO_Conversion_Rate_Customer__c</fullName>
        <inlineHelpText>Customer conversion rate - past 12 months</inlineHelpText>
        <label>PX - PO Conversion Rate_Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PX_PO_Conversion_Rate_Fab__c</fullName>
        <inlineHelpText>Fab conversion rate - past 12 months</inlineHelpText>
        <label>PX - PO Conversion Rate_Fab</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PX_Request_Revenue__c</fullName>
        <description>Mandatory to submit for approval</description>
        <inlineHelpText>Mandatory to submit for approval</inlineHelpText>
        <label>PX Request Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PX_WIP_FG1__c</fullName>
        <label>PX WIP + FG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PX_WIP_FG2__c</fullName>
        <label>PX WIP + FG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PX_WIP_FG3__c</fullName>
        <label>PX WIP + FG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PX_discounted_for_past_12_mths__c</fullName>
        <inlineHelpText>PX Spot deal quantity (data from Pricing) - past 12 mths</inlineHelpText>
        <label>PX Discounted for Past 12 Mths?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PXrequest_Formulated__c</fullName>
        <inlineHelpText>The anticipated revenue for this PX request and quantity. Total new PX under consideration for 1 device in request</inlineHelpText>
        <label>PX Request</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Past_12_mths_write_off_wafers__c</fullName>
        <description>Write-off for recommended PX Customer in the past 12 months</description>
        <label>Customer_Past 12 Mths Write Off (wafers)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_VP_Action_Date__c</fullName>
        <description>Pending VP Action Date</description>
        <label>Pending VP Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Plan_Start_Date__c</fullName>
        <label>Plan Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planning_Endorsement__c</fullName>
        <label>Planning Endorsement ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Team_Action_Date__c</fullName>
        <label>Pricing Team Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Qtr_0_Booking_History__c</fullName>
        <inlineHelpText>PO booked in current quarter</inlineHelpText>
        <label>Qtr - 0 (Booking History)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qtr_0_PO_Coverage__c</fullName>
        <inlineHelpText>PO covered for current quarter</inlineHelpText>
        <label>Qtr + 0 (PO Coverage)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qtr_0__c</fullName>
        <description>Demantra forecast for current quarter</description>
        <label>Qtr + 0 (Adjusted Demand)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qtr_1_Booking_History__c</fullName>
        <inlineHelpText>PO booked in (current -1) quarter</inlineHelpText>
        <label>Qtr - 1 (Booking History)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qtr_1_PO_Coverage__c</fullName>
        <inlineHelpText>PO covered for (current +1) quarter</inlineHelpText>
        <label>Qtr + 1 (PO Coverage)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qtr_1__c</fullName>
        <inlineHelpText>Demantra forecast for (current + 1) quarter</inlineHelpText>
        <label>Qtr + 1 (Adjusted Demand)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qtr_2_PO_Coverage__c</fullName>
        <inlineHelpText>PO covered for (current +2) quarter</inlineHelpText>
        <label>Qtr + 2 (PO Coverage)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qtr_2__c</fullName>
        <inlineHelpText>Demantra forecast for (current + 2) quarter - example</inlineHelpText>
        <label>Qtr + 2 (Adjusted Demand)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_1__c</fullName>
        <label>Quantity 1</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_3__c</fullName>
        <label>Quantity 3</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Void__c</fullName>
        <label>Quantity Void</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quatity_2__c</fullName>
        <label>Quatity 2</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REQUESTED_DEVICE__c</fullName>
        <label>REQUESTED DEVICE</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REQUESTING_FAB__c</fullName>
        <label>REQUESTING FAB</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>